# follower-bot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  README_ZH.md  banner.txt  bots.yaml  follower-bot-service.xml  loguru.yaml  pyproject.toml
data/: update.sql
email/: error_template.html  stats_template.html
src/follower_bot/: banner.py  bot.py  email.py  evaluator.py  file.py  github.py  log.py  manager.py  model.py  settings.py  store.py
src/follower_bot/bots/: __init__.py  bot.py  follow_user.py  follower.py  following.py  mail_stats.py  mutual_follow.py  mutual_unfollow.py  sync_follower.py  sync_following.py  unfollow_following.py
